[sonar][issues - *] [V04]: Se corrigen varías issues.